chore: clean vim module.

--- a/module/tmux/.tmux.conf
+++ b/module/tmux/.tmux.conf
@@ -61,5 +61,12 @@ unbind -T copy-mode-vi MouseDragEnd1Pane
 ## Enabling Vim mode
 set-window-option -g mode-keys vi
 
+# Windows
+## Starting indexing windows at 1
+set -g base-index 1
+## Renumbering all windows when any one is closed
+set -g renumber-windows on
+
 # Plugin
 run-shell $HOME/.nix-profile/share/tmux-plugins/resurrect/resurrect.tmux
+run-shell $HOME/.nix-profile/share/tmux-plugins/yank/yank.tmux
