feat: add ghostty and font-sf-mono to homebrew casks.

--- a/module/tmux/.tmux.conf
+++ b/module/tmux/.tmux.conf
@@ -1,4 +1,16 @@
-# Binding
+# Color
+## Enabling "screen-256color"
+set -g default-terminal "screen-256color"
+## Bar
+set -g status-style bg=color220,fg=black
+set-window-option -g window-status-current-style bg=color59,fg=color220
+## Clock mode
+set -g clock-mode-color color220
+## Pane
+set -g pane-border-style fg=color59
+set -g pane-active-border-style fg=color220
+
+# Key binding
 ## "Prefix"
 set -g prefix C-a
 unbind C-b
@@ -38,18 +50,6 @@ bind -r 'Up' if-shell -F '#{pane_at_top}' {} { select-pane -U }
 ### Right
 bind -r 'C-l' if-shell -F '#{pane_at_right}' {} { select-pane -R }
 bind -r 'Right' if-shell -F '#{pane_at_right}' {} { select-pane -R }
-
-# Color
-## Enabling "screen-256color"
-set -g default-terminal "screen-256color"
-## Bar
-set -g status-style bg=color220,fg=black
-set-window-option -g window-status-current-style bg=color59,fg=color220
-## Clock mode
-set -g clock-mode-color color220
-## Pane
-set -g pane-border-style fg=color59
-set -g pane-active-border-style fg=color220
 
 # Mouse mode
 ## Enabling mouse mode
