--- a/module/homebrew/app/ghostty/config
+++ b/module/homebrew/app/ghostty/config
@@ -1,10 +1,22 @@
-# Font
+# Key binding
+keybind = "cmd+shift+n=toggle_quick_terminal"
+keybind = "cmd+opt+enter=toggle_split_zoom"
+
+# Option
+## Color
+background = "#18191B"
+## Cursor
+cursor-style = "block"
+cursor-style-blink = false
+## Font
 font-family = "SF Mono"
 font-style = "Regular"
 font-thicken = true
 font-size = 11
-
+## Mouse
+mouse-hide-while-typing = true
+## Quick terminal
 quick-terminal-position = "center"
-
-# Key binding
-keybind = cmd+shift+n=toggle_quick_terminal
+quick-terminal-animation-duration = 0.1
+## Shell integration
+shell-integration-features = "no-cursor"
