--- a/module/tmux/.tmux.conf
+++ b/module/tmux/.tmux.conf
@@ -1,64 +1,75 @@
 # Key binding
-## "Prefix"
+# ◆ "Prefix"
 set -g prefix C-a
 unbind C-b
 bind-key C-a send-prefix
-## Split horizontally
+#
+# ◆ Split
+# ↳ Split horizontally
 unbind %
 bind | split-window -h
-## Split vertically
+# ↳ Split vertically
 unbind '"'
 bind - split-window -v
-## Resize pane
-### Left
+#
+# ◆ Resize pane
+# ↳ Left
 bind -r C-h resize-pane -L 5
-### Bottom
+# ↳ Bottom
 bind -r C-j resize-pane -D 5
-### Top
+# ↳ Top
 bind -r C-k resize-pane -U 5
-### Right
+# ↳ Right
 bind -r C-l resize-pane -R 5
-## Visual mode (Vim mode required)
+#
+# ◆ Vim mode
+# ↳ Visual mode
 bind-key -T copy-mode-vi 'v' send -X begin-selection
-## Copy to buffer (Vim mode required)
+# ↳ Copy to buffer
 bind-key -T copy-mode-vi 'y' send -X copy-selection
-## Select pane
-### Left
-bind -r h if-shell -F '#{pane_at_left}' {} { select-pane -L }
-### Bottom
-bind -r j if-shell -F '#{pane_at_bottom}' {} { select-pane -D }
-### Top
-bind -r k if-shell -F '#{pane_at_top}' {} { select-pane -U }
-### Right
-bind -r l if-shell -F '#{pane_at_right}' {} { select-pane -R }
-### Zoom
+#
+# ◆ Select pane
+# ↳ Left
+bind -r M-h if-shell -F '#{pane_at_left}' {} { select-pane -L }
+# ↳ Bottom
+bind -r M-j if-shell -F '#{pane_at_bottom}' {} { select-pane -D }
+# ↳ Top
+bind -r M-k if-shell -F '#{pane_at_top}' {} { select-pane -U }
+# ↳ Right
+bind -r M-l if-shell -F '#{pane_at_right}' {} { select-pane -R }
+# ↳ Zoom
 bind -r Enter resize-pane -Z
 
+
 # Option
-## Color
-### Enable "screen-256color"
+# ◆ Color
+# ↳ Enable "screen-256color"
 set -g default-terminal "screen-256color"
-### Bar
+# ↳ Bar
 set -g status-style bg=color220,fg=black
 set-window-option -g window-status-current-style bg=color59,fg=color220
-### Clock mode
+# ↳ Clock mode
 set -g clock-mode-color color220
-### Pane
+# ↳ Pane
 set -g pane-border-style fg=color59
 set -g pane-active-border-style fg=color220
-## Mouse mode
-### Enable mouse mode
+#
+# ◆ Mouse mode
+# ↳ Enable mouse mode
 set -g mouse on
-### Deactivate default selection behavior (Vim mode required)
+# ↳ Deactivate default selection behavior (Vim mode required)
 unbind -T copy-mode-vi MouseDragEnd1Pane
-## Vim mode
-### Enable Vim mode
+#
+# ◆ Vim mode
+# ↳ Enable Vim mode
 set-window-option -g mode-keys vi
-## Windows
-### Start indexing windows at 2
+#
+# ◆ Windows
+# ↳ Start indexing windows at 2
 set -g base-index 1
-### Renumber all windows when any one is closed
+# ↳ Renumber all windows when any one is closed
 set -g renumber-windows on
+
 
 # Plugin
 run-shell $HOME/.nix-profile/share/tmux-plugins/resurrect/resurrect.tmux
