--- a/module/homebrew/app/ghostty/config
+++ b/module/homebrew/app/ghostty/config
@@ -1,22 +1,28 @@
 # Key binding
 keybind = "cmd+shift+n=toggle_quick_terminal"
-keybind = "cmd+opt+enter=toggle_split_zoom"
+keybind = "cmd+enter=toggle_split_zoom"
+
 
 # Option
-## Color
+# ◆ Color
 background = "#18191B"
-## Cursor
+#
+# ◆ Cursor
 cursor-style = "block"
 cursor-style-blink = false
-## Font
+#
+# ◆ Font
 font-family = "SF Mono"
 font-style = "Regular"
 font-thicken = true
 font-size = 11
-## Mouse
+#
+# ◆ Mouse
 mouse-hide-while-typing = true
-## Quick terminal
+#
+# ◆ Quick terminal
 quick-terminal-position = "center"
 quick-terminal-animation-duration = 0.1
-## Shell integration
+#
+# ◆ Shell integration
 shell-integration-features = "no-cursor"
