fix: update ghostty config file.

--- a/module/homebrew/app/ghostty/config
+++ b/module/homebrew/app/ghostty/config
@@ -40,4 +40,4 @@ resize-overlay = never
 shell-integration-features = "no-cursor"
 #
 # ◆ Window padding
-window-padding-color = "extend-always"
+window-padding-color = "extend"
