feat: new key bindings for tmux.conf.

--- a/module/tmux/tmux.conf
+++ b/module/tmux/tmux.conf
@@ -30,13 +30,13 @@ bind-key -T copy-mode-vi 'y' send -X copy-selection
 #
 # ◆ Select pane
 # ↳ Left
-bind -r M-h if-shell -F '#{pane_at_left}' {} { select-pane -L }
+bind -r h if-shell -F '#{pane_at_left}' {} { select-pane -L }
 # ↳ Bottom
-bind -r M-j if-shell -F '#{pane_at_bottom}' {} { select-pane -D }
+bind -r j if-shell -F '#{pane_at_bottom}' {} { select-pane -D }
 # ↳ Top
-bind -r M-k if-shell -F '#{pane_at_top}' {} { select-pane -U }
+bind -r k if-shell -F '#{pane_at_top}' {} { select-pane -U }
 # ↳ Right
-bind -r M-l if-shell -F '#{pane_at_right}' {} { select-pane -R }
+bind -r l if-shell -F '#{pane_at_right}' {} { select-pane -R }
 # ↳ Zoom
 bind -r Enter resize-pane -Z
 
