chore: add a new comment norm to config files.

--- a/module/tmux/tmux.conf
+++ b/module/tmux/tmux.conf
@@ -1,9 +1,12 @@
-# Key binding
+###############################################################################
+# Key Bindings
+###############################################################################
+
 # ◆ "Prefix"
 set -g prefix C-a
 unbind C-b
 bind-key C-a send-prefix
-#
+
 # ◆ Split
 # ↳ Split horizontally
 unbind %
@@ -11,7 +14,7 @@ bind | split-window -h
 # ↳ Split vertically
 unbind '"'
 bind - split-window -v
-#
+
 # ◆ Resize pane
 # ↳ Left
 bind -r C-h resize-pane -L 5
@@ -21,13 +24,13 @@ bind -r C-j resize-pane -D 5
 bind -r C-k resize-pane -U 5
 # ↳ Right
 bind -r C-l resize-pane -R 5
-#
+
 # ◆ Vim mode
 # ↳ Visual mode
 bind-key -T copy-mode-vi 'v' send -X begin-selection
 # ↳ Copy to buffer
 bind-key -T copy-mode-vi 'y' send -X copy-selection
-#
+
 # ◆ Select pane
 # ↳ Left
 bind -r h if-shell -F '#{pane_at_left}' {} { select-pane -L }
@@ -41,7 +44,10 @@ bind -r l if-shell -F '#{pane_at_right}' {} { select-pane -R }
 bind -r Enter resize-pane -Z
 
 
-# Option
+###############################################################################
+# Options
+###############################################################################
+
 # ◆ Color
 # ↳ Enable "screen-256color"
 set -g default-terminal "screen-256color"
@@ -53,17 +59,17 @@ set -g clock-mode-color color220
 # ↳ Pane
 set -g pane-border-style fg=color59
 set -g pane-active-border-style fg=color220
-#
+
 # ◆ Mouse mode
 # ↳ Enable mouse mode
 set -g mouse on
 # ↳ Deactivate default selection behavior (Vim mode required)
 unbind -T copy-mode-vi MouseDragEnd1Pane
-#
+
 # ◆ Vim mode
 # ↳ Enable Vim mode
 set-window-option -g mode-keys vi
-#
+
 # ◆ Windows
 # ↳ Start indexing windows at 2
 set -g base-index 1
@@ -71,6 +77,9 @@ set -g base-index 1
 set -g renumber-windows on
 
 
-# Plugin
+###############################################################################
+# Plugins
+###############################################################################
+
 run-shell $HOME/.nix-profile/share/tmux-plugins/resurrect/resurrect.tmux
 run-shell $HOME/.nix-profile/share/tmux-plugins/yank/yank.tmux
