--- a/module/homebrew/app/ghostty/config
+++ b/module/homebrew/app/ghostty/config
@@ -1,43 +1,49 @@
-# Key binding
+###############################################################################
+# Key Bindings
+###############################################################################
+
 # ◆ Jump to prompt
 # ↳ Backward
 keybind = "cmd+p=jump_to_prompt:-1"
 # ↳ Forward
 keybind = "cmd+shift+p=jump_to_prompt:1"
-#
+
 # ◆ Toggle quick terminal
 keybind = "cmd+shift+n=toggle_quick_terminal"
-#
+
 # ◆ Zoom a split
 keybind = "cmd+enter=toggle_split_zoom"
 
 
-# Option
+###############################################################################
+# Options
+###############################################################################
+
 # ◆ Color
 background = "#18191B"
-#
+
 # ◆ Cursor
 cursor-style = "block"
 cursor-style-blink = false
-#
+
 # ◆ Font
 font-family = "SF Mono"
 font-style = "Regular"
 font-thicken = true
 font-size = 11
-#
+
 # ◆ Quick terminal
 quick-terminal-position = "center"
 quick-terminal-animation-duration = 0.1
-#
+
 # ◆ Mouse
 mouse-hide-while-typing = true
-#
+
 # ◆ Resize overlay
 resize-overlay = never
-#
+
 # ◆ Shell integration
 shell-integration-features = "no-cursor"
-#
+
 # ◆ Window padding
 window-padding-color = "extend"
