refactor: improve install script.

--- a/module/tmux/tmux.conf
+++ b/module/tmux/tmux.conf
@@ -2,45 +2,34 @@
 # Key Bindings
 ###############################################################################
 
-# ◆ "Prefix"
+# Prefix
 set -g prefix C-a
 unbind C-b
 bind-key C-a send-prefix
 
-# ◆ Split
-# ↳ Split horizontally
+# Split
 unbind %
 bind | split-window -h
-# ↳ Split vertically
 unbind '"'
 bind - split-window -v
 
-# ◆ Resize pane
-# ↳ Left
+# Resize pane
 bind -r C-h resize-pane -L 5
-# ↳ Bottom
 bind -r C-j resize-pane -D 5
-# ↳ Top
 bind -r C-k resize-pane -U 5
-# ↳ Right
 bind -r C-l resize-pane -R 5
 
-# ◆ Vim mode
+# Vim mode
 # ↳ Visual mode
 bind-key -T copy-mode-vi 'v' send -X begin-selection
 # ↳ Copy to buffer
 bind-key -T copy-mode-vi 'y' send -X copy-selection
 
-# ◆ Select pane
-# ↳ Left
+# Select pane
 bind -r h if-shell -F '#{pane_at_left}' {} { select-pane -L }
-# ↳ Bottom
 bind -r j if-shell -F '#{pane_at_bottom}' {} { select-pane -D }
-# ↳ Top
 bind -r k if-shell -F '#{pane_at_top}' {} { select-pane -U }
-# ↳ Right
 bind -r l if-shell -F '#{pane_at_right}' {} { select-pane -R }
-# ↳ Zoom
 bind -r Enter resize-pane -Z
 
 
@@ -48,7 +37,7 @@ bind -r Enter resize-pane -Z
 # Options
 ###############################################################################
 
-# ◆ Color
+# Color
 # ↳ Enable "screen-256color"
 set -g default-terminal "screen-256color"
 # ↳ Bar
@@ -60,17 +49,17 @@ set -g clock-mode-color color220
 set -g pane-border-style fg=color59
 set -g pane-active-border-style fg=color220
 
-# ◆ Mouse mode
+# Mouse mode
 # ↳ Enable mouse mode
 set -g mouse on
 # ↳ Deactivate default selection behavior (Vim mode required)
 unbind -T copy-mode-vi MouseDragEnd1Pane
 
-# ◆ Vim mode
+# Vim mode
 # ↳ Enable Vim mode
 set-window-option -g mode-keys vi
 
-# ◆ Windows
+# Windows
 # ↳ Start indexing windows at 2
 set -g base-index 1
 # ↳ Renumber all windows when any one is closed
