--- a/module/homebrew/app/ghostty/config
+++ b/module/homebrew/app/ghostty/config
@@ -2,16 +2,14 @@
 # Key Bindings
 ###############################################################################
 
-# ◆ Jump to prompt
-# ↳ Backward
+# Jump to prompt
 keybind = "cmd+p=jump_to_prompt:-1"
-# ↳ Forward
 keybind = "cmd+shift+p=jump_to_prompt:1"
 
-# ◆ Toggle quick terminal
+# Toggle quick terminal
 keybind = "cmd+shift+n=toggle_quick_terminal"
 
-# ◆ Zoom a split
+# Zoom a split
 keybind = "cmd+enter=toggle_split_zoom"
 
 
@@ -19,31 +17,31 @@ keybind = "cmd+enter=toggle_split_zoom"
 # Options
 ###############################################################################
 
-# ◆ Color
+# Color
 background = "#18191B"
 
-# ◆ Cursor
+# Cursor
 cursor-style = "block"
 cursor-style-blink = false
 
-# ◆ Font
+# Font
 font-family = "SF Mono"
 font-style = "Regular"
 font-thicken = true
 font-size = 11
 
-# ◆ Quick terminal
+# Quick terminal
 quick-terminal-position = "center"
 quick-terminal-animation-duration = 0.1
 
-# ◆ Mouse
+# Mouse
 mouse-hide-while-typing = true
 
-# ◆ Resize overlay
+# Resize overlay
 resize-overlay = never
 
-# ◆ Shell integration
+# Shell integration
 shell-integration-features = "no-cursor"
 
-# ◆ Window padding
+# Window padding
 window-padding-color = "extend"
