--- a/module/tmux/tmux.conf
+++ b/module/tmux/tmux.conf
@@ -55,12 +55,16 @@ set -g mouse on
 # ↳ Deactivate default selection behavior (Vim mode required)
 unbind -T copy-mode-vi MouseDragEnd1Pane
 
+# Prefix
+# ↳ Delay after ESC
+set -sg escape-time 10
+
 # Vim mode
 # ↳ Enable Vim mode
 set-window-option -g mode-keys vi
 
 # Windows
-# ↳ Start indexing windows at 2
+# ↳ Start indexing windows at 1
 set -g base-index 1
 # ↳ Renumber all windows when any one is closed
 set -g renumber-windows on
