fix: change key bindings related to pane for tmux.

--- a/module/tmux/tmux.conf
+++ b/module/tmux/tmux.conf
@@ -26,10 +26,10 @@ bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mode-vi 'y' send -X copy-selection
 
 # Select pane
-bind -r h if-shell -F '#{pane_at_left}' {} { select-pane -L }
-bind -r j if-shell -F '#{pane_at_bottom}' {} { select-pane -D }
-bind -r k if-shell -F '#{pane_at_top}' {} { select-pane -U }
-bind -r l if-shell -F '#{pane_at_right}' {} { select-pane -R }
+bind -r Ì if-shell -F '#{pane_at_left}' {} { select-pane -L }
+bind -r Ï if-shell -F '#{pane_at_bottom}' {} { select-pane -D }
+bind -r È if-shell -F '#{pane_at_top}' {} { select-pane -U }
+bind -r ¬ if-shell -F '#{pane_at_right}' {} { select-pane -R }
 bind -r Enter resize-pane -Z
 
 
