--- a/module/tmux/tmux.conf
+++ b/module/tmux/tmux.conf
@@ -40,14 +40,8 @@ bind -r Enter resize-pane -Z
 # Color
 # ↳ Enable "screen-256color"
 set -g default-terminal "screen-256color"
-# ↳ Bar
-set -g status-style bg=color220,fg=black
-set-window-option -g window-status-current-style bg=color59,fg=color220
 # ↳ Clock mode
 set -g clock-mode-color color220
-# ↳ Pane
-set -g pane-border-style fg=color59
-set -g pane-active-border-style fg=color220
 
 # Mouse mode
 # ↳ Enable mouse mode
@@ -59,9 +53,14 @@ unbind -T copy-mode-vi MouseDragEnd1Pane
 # ↳ Delay after ESC
 set -sg escape-time 10
 
+# Status bar
+# ↳ Auto-scale the status bar according to its content
+set -g status-left-length 0
+set -g status-right-length 0
+
 # Vim mode
 # ↳ Enable Vim mode
-set-window-option -g mode-keys vi
+setw -g mode-keys vi
 
 # Windows
 # ↳ Start indexing windows at 1
@@ -74,5 +73,29 @@ set -g renumber-windows on
 # Plugins
 ###############################################################################
 
+# Tmux-nova configuration
+# ↳ Nerdfont
+set -g @nova-nerdfonts true
+set -g @nova-nerdfonts-left 
+set -g @nova-nerdfonts-right 
+# ↳ Color
+set -g @nova-pane-active-border-style "color220"
+set -g @nova-pane-border-style "#303030"
+set -g @nova-segment-mode-colors "#{?client_prefix,#fe5f5f,#00ffff} #{?client_prefix,#920101,#006b6b}"
+set -g @nova-segment-whoami-colors "#ffd700 #303030"
+set -g @nova-status-style-active-bg "#ffd700"
+set -g @nova-status-style-active-fg "#303030"
+set -g @nova-status-style-bg "#303030"
+set -g @nova-status-style-fg "#ffd700"
+# ↳ Content
+set -g @nova-pane "#I#{?pane_in_mode,  #{pane_mode},}  #W"
+set -g @nova-segment-mode "#[bold] #S"
+set -g @nova-segment-whoami "#(whoami)@#h"
+set -g @nova-segments-0-left "mode"
+set -g @nova-segments-0-right "whoami"
+set -g @nova-rows 0
+
+# Sourcing plugins
 run-shell $HOME/.nix-profile/share/tmux-plugins/resurrect/resurrect.tmux
+run-shell $HOME/.nix-profile/share/tmux-plugins/tmux-nova/nova.tmux
 run-shell $HOME/.nix-profile/share/tmux-plugins/yank/yank.tmux
