--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,12 +4,12 @@ repos:
       - id: alejandra
         name: Alejandra (Nix formatter)
         description: This hook checks Nix files with Alejandra.
-        entry: bash -c 'nix-shell -p alejandra --run "alejandra -q ${@}"' -- 
+        entry: bash -c 'for arg in "$@"; do nix-shell -p alejandra --run "alejandra -q $arg"; done;' --
         language: system
         files: \.nix$
       - id: stylua
         name: Stylua (Lua formatter)
         description: This hook checks Lua files with Stylua.
-        entry: bash -c 'nix-shell -p stylua --run "stylua ${@}"' --
+        entry: bash -c 'for arg in "$@"; do nix-shell -p stylua --run "stylua $arg"; done;' --
         language: system
         files: \.lua$
