--- a/module/tmux/tmux.conf
+++ b/module/tmux/tmux.conf
@@ -88,7 +88,7 @@ set -g @nova-status-style-active-fg "#303030"
 set -g @nova-status-style-bg "#303030"
 set -g @nova-status-style-fg "#ffd700"
 # ↳ Content
-set -g @nova-pane "#I#{?pane_in_mode,  #{pane_mode},}  #W"
+set -g @nova-pane "#I#{?pane_in_mode,  #{pane_mode},}  #W #{?window_zoomed_flag,[Z],}"
 set -g @nova-segment-mode "#[bold] #S"
 set -g @nova-segment-whoami "#(whoami)@#h"
 set -g @nova-segments-0-left "mode"
