feat(tmux): change key bindings.

--- a/module/tmux/tmux.conf
+++ b/module/tmux/tmux.conf
@@ -7,11 +7,15 @@ set -g prefix C-a
 unbind C-b
 bind-key C-a send-prefix
 
+# Detach
+unbind d
+bind z detach-client
+
 # Split
 unbind %
-bind | split-window -h
+bind d split-window -h
 unbind '"'
-bind - split-window -v
+bind D split-window -v
 
 # Resize pane
 bind -r C-h resize-pane -L 5
@@ -21,9 +25,9 @@ bind -r C-l resize-pane -R 5
 
 # Vim mode
 # ↳ Visual mode
-bind-key -T copy-mode-vi 'v' send -X begin-selection
+bind -T copy-mode-vi 'v' send -X begin-selection
 # ↳ Copy to buffer
-bind-key -T copy-mode-vi 'y' send -X copy-selection
+bind -T copy-mode-vi 'y' send -X copy-selection
 
 # Select pane
 bind -r Ì if-shell -F '#{pane_at_left}' {} { select-pane -L }
