refactor(tmux): use hex color instead of xterm number.

--- a/module/tmux/tmux.conf
+++ b/module/tmux/tmux.conf
@@ -45,7 +45,7 @@ bind -r Enter resize-pane -Z
 # ↳ Enable "screen-256color"
 set -g default-terminal "screen-256color"
 # ↳ Clock mode
-set -g clock-mode-color color220
+set -g clock-mode-color "#ffd700"
 
 # Mouse mode
 # ↳ Enable mouse mode
